--- a/package.json
+++ b/package.json
@@ -75,8 +75,5 @@
   "engines": {
     "node": ">=18"
   },
-  "license": "Apache-2.0",
-  "dependencies": {
-    "fuse.js": "^7.1.0"
-  }
+  "license": "Apache-2.0"
 }
